# ps-price

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-ci-offline.txt  task-1-uv-pytest.txt  task-2-missing-price.txt  task-2-price-contract.txt  task-3-all-games-plus-signal-audit.txt  task-3-all-games-raw-plus-audit.txt  task-3-classification-tests.txt  task-3-fixture-targets-atlas.json  task-3-fixture-targets-blocked.txt  task-3-live-debug.txt  task-3-live-discovery.txt  task-3-live-page-10-debug.txt  task-3-live-page-failure.txt  task-3-live-pages-10-12-debug.txt  task-4-fixture-contract.txt  task-4-fixture-size.txt  task-4-git-status-ignored-atlas.txt  task-5-malformed-json.txt  task-5-parser-suite.txt  task-6-doc-source-strategy.txt  task-6-source-strategy.txt  task-7-cli-json-tests.txt  task-7-fixture-report.json  task-8-doc-gap-check.txt  task-8-full-pytest.txt  task-8-git-status-filtered.txt  task-8-git-status.txt
.sisyphus/plans/: ps-price-crawler-stabilization.md
src/ps_price_crawler/: __init__.py  (+9 more)
tests/: test_catalog.py  test_cli_fixture_targets.py  test_cli_json.py  test_django_setup.py  test_fixture_contract.py  test_ingestion_service.py  test_next_data.py  test_price_contract.py  test_product.py  test_query_views.py  test_scheduler_command.py  test_scheduler_service.py  test_source_strategy.py  test_sync_command.py  test_sync_models.py  test_sync_runner.py  test_web_models.py  test_web_queries.py  test_web_views.py
(+64 files in other folders)
